# nistrmf

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  create-superuser.sh  docker-compose.yml  manage.py  pyproject.toml  run-uv.sh
docs/: parse_pdf.py  parse_pdf_pymupdf.py
docs/data/: metadata.json  metadata_pymupdf.json
docs/data/text/: page_1.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_2.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  page_26.txt  page_27.txt  page_28.txt  page_29.txt  page_3.txt  page_30.txt  page_31.txt  page_32.txt  page_33.txt  page_34.txt  page_35.txt  page_36.txt  page_37.txt  page_38.txt  page_39.txt  page_4.txt  page_40.txt  page_41.txt  page_42.txt  page_43.txt  page_44.txt  page_45.txt  (+8 more)
govern/: admin.py  apps.py  models.py  serializers.py  views.py
govern/migrations/: 0001_initial.py  0002_initial.py
management/: __init__.py  admin.py  models.py  serializers.py  views.py
management/management/commands/: __init__.py  load_sample_data.py
management/migrations/: 0001_initial.py
map/: admin.py  models.py  serializers.py  views.py
map/migrations/: 0001_initial.py
measure/: admin.py  models.py  serializers.py  views.py
measure/migrations/: 0001_initial.py
nistaiapp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
nistaiapp/templates/: main_dashboard.html
